# sctda-cancer-plasticity

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README-zh-tw.md  README.md  pyproject.toml
.github/workflows/: auto-release.yml
data/processed/: qc_metrics.csv
envs/: environment.yml
manuscript/: Makefile  cover_letter_genome_biology.md  preprint.tex  preprint_ncomms.tex  references.bib  submission_checklist.md  zh_digest.qmd
manuscript/audit/: inference_audit.argdown
manuscript/sections/: abstract.tex  acknowledgements.tex  background.tex  conclusions.tex  declarations.tex  discussion.tex  figures.tex  figures_ncomms.tex  figures_si.tex  methods.tex  results.tex
manuscript/submission/: checklist.md  cover_letter.md  credit_taxonomy.md  declarations.md  template_setup.md
manuscript/supplements/: methods_extended.tex
notebooks/: 01-preprocessing.ipynb  02-standard-analysis.ipynb  03-topological-analysis.ipynb  04-cell-cycle-ablation.ipynb  05-gene-attribution.ipynb  06-validation.ipynb  07-figures.ipynb
plan/: 00-overview.md  01-todo.md  02-decisions.md  03-analysis-protocol.md  04-figure-plan.md
scripts/: 01_preprocess.py  02_standard_analysis.py  03_topology.py  04_cell_cycle_ablation.py  05_gene_attribution.py  06_validation.py  07_figures.py  08_validation_pdx.py  09_validation_kim_atlas.py  10_ablation_permtest.py  11_pdx_gene_attribution.py  12_convert_tables_to_parquet.py  13_harmony_batch_correction.py  14_validation_maynard.py  15_maynard_full_cohort.py  download_data.py  fig1_concept.py
tests/: test_topology.py
(+138 files in other folders)
