[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sctda-plasticity"
version = "0.1.0"
description = "Topological data analysis of single-cell RNA-seq for cancer drug tolerance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "ripser>=0.6",
    "persim>=0.3",
    "kmapper>=2.0",
    "giotto-tda>=0.6",
    "gseapy",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
